# cpp-cmake-gtest-santiziers-coverage-setup

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  static-analyzing.sh
cmake/: AddTest.cmake  CodeCoverage.cmake
include/: binary_search.hpp
src/: CMakeLists.txt  binary_search.cpp
tests/: CMakeLists.txt  binary_search_test.cpp
